

Version 1.20
=============
- translate Fortran code of Diethelm Wuertz for Halton sequence.
- start to translate Fortran code of Diethelm Wuertz for Sobol sequence.
- add defensive programming for QMC.

BUGS FIX
- scrambling = 1, 3 for Sobol sequences. (provided by Makoto Matsumoto and Mutsuo Saito) 
- mixed = TRUE for QMC sequences. 

NOTE FIX
- usage of R_useDynamicSymbols to preclude compilation
NOTEs, better registration of native routines and reduced
symbol visibility.

Version 1.17 and 1.17.1
=============
- change DESCRIPTION file.
- update NAMESPACE for R 3.3.0.
- update the LICENSE file.
- raise a warning when scrambling for Sobol sequences is incorrect.

BUG REPORT 
(by Dan Souther, Kemal Dincer Dingec, Marius Hofert, Nicolas Chopin)
- scrambling = 1, 3 for Sobol sequences.
(by Hiroyuki Kawakatsu)
- mixed = TRUE for QMC sequences. 

Version 1.16
=============
- change title and other minor things in vignettes.

Version 1.15
=============

- remove the use of 'long long' in some C code.
- update LICENCE file.
- move autoconf files to tools directory.
- no longer use a4 paper format in vignette.

Version 1.14
=============

- change licence from BSD_2_clause to BSD_3_clause.
- minor change.

Version 1.13
=============

- this version is one of the last versions working with
package rngWELL >= 0.11-0.
- change licence from BSD to BSD_2_clause.

NOTE FIX

- remove NOTES appearing in R CMD check.

Version 1.12
=============

NEW FEATURES

- add new test files.
- increase the possible dimension of Halton sequences.

WARNING FIX in Fortran files

- remove an array over-run (reported by Brian Ripley) and tab 
characters in LowDiscrepancy.f.


Version 1.11
=============

- this version is one of the last versions working with
package rngWELL == 0.10-x.

NOTES FIXES

- this version use packageStartupMessage function for the .onAttach
rather than the cat function. 
- remove a printf in KnuthTAOCP2002.c

WARNING FIXES in C files
