@@ -1,0 +1,4 @@
+#use C11 standard
+C_STD = C11
+
+
