@@ -54,13 +54,22 @@
 #include <Rmath.h>
 
 
-/* same as SFMT.h. see http://en.wikibooks.org/wiki/C_Programming/C_Reference/stdint.h */
+/* 
+ * 64-bit int size type
+ * similar to SFMT.h: see http://en.wikibooks.org/wiki/C_Programming/C_Reference/stdint.h 
+ * and p150 of Write Portable Code by Brian Hook
+ */
 #if defined(__STDC_VERSION__) && (__STDC_VERSION__ >= 199901L)
  #include <inttypes.h>
  #define HAVE_INT32_64_DEFINED 1
-#elif defined(_MSC_VER) || defined(__BORLANDC__)
+#elif defined(_MSC_VER) || defined(__BORLANDC__) || defined(__WATCOMC__)
  typedef unsigned int uint32_t;
  typedef unsigned __int64 uint64_t;
+ #define inline __inline
+ #define HAVE_INT32_64_DEFINED 1
+#elif defined(__LP64__) || defined(__powerpc64__)
+ typedef unsigned int uint32_t;
+ typedef unsigned long uint64_t;
  #define inline __inline
  #define HAVE_INT32_64_DEFINED 1
 #else
@@ -71,14 +80,32 @@
  #define HAVE_INT32_64_DEFINED 1
 #endif
 
+/*64-bit int size specification for printf family*/
 #ifndef PRIu64
  #if defined(_MSC_VER) || defined(__BORLANDC__)
- #include <stdio.h>
- #define PRIu64 "I64u"
- #define PRIx64 "I64x"
+  #include <stdio.h>
+  #define PRIu64 "I64u"
+  #define PRIx64 "I64x"
+ #elif defined(__LP64__) || defined(__powerpc64__)
+  #include <stdio.h>
+  #define PRIu64 "lu"
+  #define PRIx64 "lx"
  #else
- #define PRIu64 "llu"
- #define PRIx64 "llx"
+  #define PRIu64 "llu"
+  #define PRIx64 "llx"
+ #endif
+#endif
+
+/*64-bit int size specification for scanf family*/
+#ifndef SCNu64
+ #if defined(_MSC_VER) || defined(__BORLANDC__)
+  #include <stdio.h>
+  #define SCNu64 "U64"
+ #elif defined(__LP64__) || defined(__powerpc64__)
+  #include <stdio.h>
+  #define SCNu64 "lu"
+ #else
+  #define SCNu64 "llu"
  #endif
 #endif
 
@@ -87,7 +114,7 @@ void user_unif_init_congru(uint32_t seed);
 
 double get_congruRand();
 int check_congruRand(uint64_t mod, uint64_t mask, uint64_t mult, uint64_t incr, uint64_t seed);
-void set_congruRand(uint64_t inp_mod, uint64_t inp_mult, uint64_t inp_incr, uint64_t inp_seed);
+void set_congruRand(uint64_t inp_mod, uint64_t inp_mult, uint64_t inp_incr, uint64_t inp_seed, uint64_t inp_mask);
 void get_seed_congruRand(uint64_t *out_seed);
 
 /* Functions accessed from .C() */
