@@ -55,3 +55,7 @@ void (*WELL_get_set_entry_point)(void (* user_unif_set_generator)());
 void set_noop();
 void current_generator(int *pgener);
 void put_user_unif_set_generator();
+
+/* Functions to be found by RNGkind() */
+double *user_unif_rand(void);
+void user_unif_init(unsigned int seed);
